# big-data-projet

./: .gitignore
ex01_data_retrieval/: build.sbt
ex01_data_retrieval/src/main/scala/: retrieve-data.scala
ex02_data_ingestion/: build.sbt
ex02_data_ingestion/src/main/scala/: data_ingestion.scala
ex03_sql_table_creation/: creation.sql  insertion.sql
ex05_ml_prediction_service/: app.py  data_preprocessing.py  machine_learning.py  pyproject.toml
notebooks/: 1.0-cd-initial-ml-reference.ipynb
